# paw

./: .AGENT_EXECUTION_ROADMAP.md  .FLOW_STRATEGY.md  .FLOW_STRATEGY.md~d983a40b347c03a70f0b330d24bf18fa3193db15  .flow_strategy.md  .gitignore  .paw-architecture.md  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_TODO.md  AUTONOMY_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_OVERHAUL_PLAN.md  ENGINE_REFACTOR.md  ENGRAM.md  GCP_SETUP.md  KINETIC_DESIGN_PLAN.md  N8N_INTEGRATION_PLAN.md  PAWZHUB_PLAN.md  PAW_AUDIT.md  PAW_ENGINE.md  PAW_SECURITY.md  PAW_STATUS.md  README.md  README.zh-CN.md  SECURITY.md  SKILLS_WORKSPACE_PLAN.md  THE_FORGE.md  THREE_TIER_PLAN.md  TOOLS_REFACTOR.md  UX_OVERHAUL.md  VIEWS_REFACTOR.md  VIEWS_REFACTOR_PROMPTS.md  ZERO_GAP_PLAN.md  docs.json  index.html  index.html.bak  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
.github/: CODEOWNERS  FUNDING.yml
channels/: discord.mdx  discourse.mdx  irc.mdx  matrix.mdx  mattermost.mdx  nextcloud.mdx  nostr.mdx  overview.mdx  slack.mdx  telegram.mdx  twitch.mdx  webchat.mdx  whatsapp.mdx
docs/: ENGRAM_GAP_ANALYSIS.md  ENGRAM_GAP_PHASE1.md  Engram_Plan.md  cli.md  docusaurus.config.ts  oauth-app-registration.md  oauth-registration-checklist.md  package-lock.json  package.json  sidebars.ts  tsconfig.json
guides/: agents.mdx  (+27 more)
pawz-code/app/src-tauri/: Cargo.toml  tauri.conf.json
pawz-code/app/src-tauri/src/: main.rs
pawz-code/server/: Cargo.toml
pawz-code/server/src/: agent.rs  claude_code.rs  config.rs  engram.rs  main.rs  memory.rs  protocols.rs  provider.rs  reduction.rs  state.rs  tools.rs  types.rs
(+867 files in other folders)
