[package]
name = "pawz-code"
version = "0.1.0"
edition = "2021"
description = "Pawz CODE — standalone developer AI agent with persistent memory, code tools, and VS Code SSE streaming"

[[bin]]
name = "pawz-code"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (LLM APIs + fetch tool)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# SQLite memory
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
